--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="col-md-6 offset-md-3 mt-5">
-    <form [formGroup]="this.loginForm">
+    <form [formGroup]="this.loginForm" (ngSubmit)="submitForm()">
         <div class="form-group">
           <label for="exampleInputEmail1">Email usuario</label>
           <input type="email"
@@ -8,12 +8,14 @@
           id="exampleInputEmail1" 
           aria-describedby="emailHelp"
           [ngClass]="{
-              'is-invalid':this.loginForm.controls.username.errors
+              'is-invalid':this.enviado && this.loginForm.controls.username.errors
           }"
           placeholder="Introduce tu email">
           <small id="emailHelp" class="form-text text-muted">Nunca compartas la contraseña con nadie</small>
-          <div class="invalid-feedback" *ngIf="this.loginForm.controls.username.errors?.required">Tienes que rellenar este campo</div>
-          <div class="invalid-feedback" *ngIf="this.loginForm.controls.username.errors?.required">Esto no es un email</div>
+          <div class="invalid-feedback" *ngIf="enviado && this.loginForm.controls.username.errors?.required">Tienes que rellenar este campo
+
+          </div>
+          <div class="invalid-feedback" *ngIf="enviado && this.loginForm.controls.username.errors?.email">Esto no es un email</div>
         </div>
         <div class="form-group">
           <label for="exampleInputPassword1">Introduce tu Contraseña</label>
@@ -22,10 +24,10 @@
           id="exampleInputPassword1"
           formControlName="password"
           [ngClass]="{
-            'is-invalid':this.loginForm.controls.password.errors
+            'is-invalid':this.enviado && this.loginForm.controls.password.errors
         }"
           placeholder="Contraseña">
-          <div class="invalid-feedback" *ngIf="this.loginForm.controls.password.errors?.required">Esto no es un email</div>
+          <div class="invalid-feedback" *ngIf="enviado && this.loginForm.controls.password.errors?.required">Esto no es un email</div>
 
         </div>
         <button type="submit" class="btn btn-primary">Iniciar sesión</button>
